import "Docflow/Attachment.proto";
import "UniversalMessage.proto";

package Diadoc.Api.Proto.Docflow;

message UniversalMessageAttachmentDocflow {
    required Attachment Attachment = 1; 
    required UniversalMessageInfo MessageInfo = 2;
    required string ContentTypeId = 3;
}